Alignment fixes

--- a/src/Components/AccountModals/accountmodal.scss
+++ b/src/Components/AccountModals/accountmodal.scss
@@ -1,7 +1,7 @@
 .connect-modal.account-modal {
   .modal-body {
     text-align: center;
-    .ellips {
+    .ellipse {
       width: 80px;
       height: 80px;
       margin-bottom: 8px;
