--- a/src/Components/Home/ChildComponent/home.scss
+++ b/src/Components/Home/ChildComponent/home.scss
@@ -52,7 +52,4 @@
   @media(max-width:767px){
     margin-top: -510px;
   }
-  @media(max-width:398px){
-    margin-top: -325px;
-  }
 }
